--- a/src/components/Table/index.less
+++ b/src/components/Table/index.less
@@ -4,9 +4,15 @@
     tr:hover {
       th:nth-child(1) div {
         background-color: white;
+        border-radius: 12px;
       }
-      th div {
-        border-radius: 8px;
+    }
+    tr {
+      th:nth-child(1) {
+        padding-inline-start: 8px;
+        div {
+          padding: 0 4px;
+        }
       }
     }
   }
