--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,18 @@
   src: url(./assets/font/fontello.ttf);
 }
 
+html {
+  /* -webkit-tap-highlight-color: transparent; */
+}
+
+.icon {
+  width: 1em;
+  height: 1em;
+  overflow: hidden;
+  vertical-align: -0.15em;
+  fill: currentColor;
+}
+
 ::-webkit-scrollbar {
   width: 6px;
   height: 6px;
