--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--chakra-colors-gray-400);
-  border-radius: 6px;
+  background: var(--chakra-colors-gray-1);
+  border-radius: 8px;
 }
 
 ::-webkit-scrollbar-track {
-  background: var(--chakra-colors-gray-100);
-  border-radius: 6px;
+  background: var(--chakra-colors-gray-5);
+  border-radius: 8px;
 }
